--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -19,33 +19,38 @@ body {
 }
 
 .header {
-    padding: 3rem;
+    padding: 3.2rem 2.4rem;
 
     background: url(../images/nicole.jpg) no-repeat left;
     background-size: cover;
 
     flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.header__logo {
+    padding: 0.3rem 0.4rem 0 0;
 }
 
 .header__title {
     color: var(--color-white);
     text-transform: uppercase;
     display: flex;
-    align-items: space-b;
+    flex-direction: row;
 }
 
-.header__h1 {
-    line-height: 0rem;
-}
 
 .header__intro {
     color: var(--color-white);
+    padding: 2.4rem 1.6rem 4.8rem;
     display: flex;
     flex-flow: row wrap;
-    align-content: flex-end;
     text-align: right;
 
-    /*background: #f9f9f9;*/
+    background: #f9f9f933;
 }
 
 main {
@@ -53,26 +58,72 @@ main {
     flex-basis: 50%;
 }
 
+.main__title {
+  background-color: #F9F9F9;
+  padding: 5vh;
+}
+
 section {
-  position: relative;
-   display: flex;
-   flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 article {
   display: flex;
   flex-direction: column;
   flex-basis: 50%;
-  border: solid 0.05rem #eaeaea;
-  padding: 2rem;
-  row-gap: 2rem;
+  justify-content: space-evenly;
+  border-bottom: solid 1px #eaeaea;
+  border-left: solid 1px #eaeaea;
+  padding: 1rem;
+  row-gap: 1rem;
+  height: 45vh;
 }
+
+.article__tag {
+  display: inline-block;
+ color: white;
+ padding: 0.5rem;
+ border-radius: 3px;
+}
+
+.article__tag--news {
+ background-color: #98DC62;
+}
+
+.article__tag--team {
+  background-color: #DC5E53;
+ }
+
+ .article__tag--work {
+  background-color: #0766F0;
+ }
 
 .article__users {
   display: flex;
+  gap: 0.5rem;
 }
+
+.article__img {
+  width: 2rem;;
+  height: 2rem;
+  margin-right: 1rem;
+}
+
+.article__linkUser {
+ margin-right: 10 rem;
+ text-decoration: none;
+ color: black;
+ font-weight: bold;
+}
+
+time {
+  color: #C2C6CC;
+}
+
 
 figcaption {
   display: flex;
   flex-direction: column;
+  row-gap: 2rem;
 }
