--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,6 +1,7 @@
 :root{
     --color-white: #fff;
     --color-black: #000;
+    --color-header: #F9F9F9;
     
     --font: sans-serif;
     
@@ -47,15 +48,11 @@ body {
 }
 
 .header__title-oclock {
-    overflow-wrap: auto;
     width: 20%;
 }
 
 .header__intro {
     padding: 2.4rem 1.6rem 2.4rem 11.2rem;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-end;
     text-align: right;
     font-size: small;
     text-shadow: var(--shadow);
@@ -77,7 +74,6 @@ body {
 
 .header__navbar {
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
     padding-left: 36%;
     font-size: 1.4rem;
@@ -117,9 +113,15 @@ article {
     height: 45vh;
 }
 
-.article--top {
-  border: solid 1px black;
-  border-collapse: collapse;
+.article--left {
+  border-top: solid 1px #F9F9F9;;
+  border-left: solid 1px #F9F9F9;;
+}
+
+.article--right {
+  border-top: solid 1px #F9F9F9;;
+  border-right: solid 1px #F9F9F9;;
+  border-left: solid 1px #F9F9F9;;
 }
 
 .article__title {
