--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,7 @@
 :root{
     --color-white: #fff;
     --color-black: #000;
-    --color-header: #F9F9F9;
+    --color-header: #f9f9f9;
     
     --font: sans-serif;
     
@@ -35,6 +35,7 @@ body {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
+    position: sticky;
 }
 
 .header__logo {
@@ -44,7 +45,7 @@ body {
 .header__title {
     text-transform: uppercase;
     display: flex;
-    line-height: 1.8rem;
+    line-height: 1.6rem;
 }
 
 .header__title-oclock {
@@ -76,7 +77,7 @@ body {
     display: flex;
     justify-content: space-around;
     padding-left: 36%;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 
     text-shadow: var(--shadow);
 }
@@ -84,6 +85,8 @@ body {
 main {
     flex-grow: 1;
     flex-basis: 50%;
+
+    overflow: scroll;
 }
 
 .main__titleContainer {
@@ -91,8 +94,8 @@ main {
     align-items: center;
     
     height: 10vh;
-    background-color: #F9F9F9;
-    padding: 2rem;
+    background-color: var(--color-header);
+    padding: 2.4rem;
     font-size: large;
 }
 
@@ -114,14 +117,14 @@ article {
 }
 
 .article--left {
-  border-top: solid 1px #F9F9F9;;
-  border-left: solid 1px #F9F9F9;;
+  border-top: solid 1px var(--color-header);
+  border-left: solid 1px var(--color-header);
 }
 
 .article--right {
-  border-top: solid 1px #F9F9F9;;
-  border-right: solid 1px #F9F9F9;;
-  border-left: solid 1px #F9F9F9;;
+  border-top: solid 1px var(--color-header);
+  border-right: solid 1px var(--color-header);
+  border-left: solid 1px var(--color-header);
 }
 
 .article__title {
@@ -160,13 +163,13 @@ article {
 }
 
 .article__img {
-    width: 2rem;;
-    height: 2rem;
-    margin-right: 1rem;
+    width: 2.4rem;;
+    height: 2.4rem;
+    margin-right: 1.6rem;
 }
 
 .article__linkUser {
-    margin-right: 10 rem;
+    margin-right: 1.2 rem;
     text-decoration: none;
     color: black;
     font-weight: bold;
@@ -181,6 +184,6 @@ figcaption {
     display: flex;
     flex-direction: column;
     
-    row-gap: 2rem;
+    row-gap: 2.4rem;
     height: 60%;
 }
